--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,29 @@ img {
     color: var(--accent-color);
 }
 
+.link.current::after {
+
+    content: '';
+    display: block;
+    position: absolute;
+
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--accent-color);
+    bottom: 0;
+    left: 0;
+
+    opacity: 1;
+
+}
+
+.nav .link {
+    display: block;
+    position: relative;
+}
+
+
 .nav .link.current {
     color: var(--accent-color);
 }
@@ -612,4 +635,63 @@ img {
 .list .items:focus,
 .list .items:hover {
     box-shadow: 1px 4px 6px rgb(0 0 0 / 16%), 0px 4px 4px rgb(0 0 0 / 6%), 0px 1px 1px rgb(0 0 0 / 12%);
+}
+
+/* Модальное вікно */
+
+.backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.2);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 100;
+}
+
+
+.backdrop.is-hidden {
+    opacity: 0;
+    /* visibility: hidden; */
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    height: 581px;
+    background: var(--primary-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.close {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        background: var(--primary-bg-color);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-color: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close:hover,
+.close:focus {
+    border-color: var(--accent-color);
+}
+
+.close:hover .close-icon,
+.close:focus .close-icon {
+    fill: var(--accent-color);
 }
