--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,8 @@ img {
     letter-spacing: 0.02em;
     text-decoration: none;
     padding-top: 32px;
-    padding-bottom: 32px;        
+    padding-bottom: 32px; 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-list:focus,
 .svg-list:hover,
@@ -146,6 +147,7 @@ img {
 .nav .link {
     display: block;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -602,7 +604,8 @@ img {
 .list .items {
     display: block;
     margin-bottom: 30px;
-    text-decoration: none;    
+    text-decoration: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list .projects:nth-last-child(-n + 3) {
@@ -636,6 +639,39 @@ img {
 .list .items:hover {
     box-shadow: 1px 4px 6px rgb(0 0 0 / 16%), 0px 4px 4px rgb(0 0 0 / 6%), 0px 1px 1px rgb(0 0 0 / 12%);
 }
+
+.projects-text-overlay {
+    font-size: 18px;
+    line-height: 1.55;
+    color: var(--text-white);
+    text-align: left;
+    padding: 63px 24px;
+    overflow: auto;
+}
+
+.projects-box {
+    position: relative;
+    overflow: hidden;
+}
+
+.list .items:hover .projects-overlay,
+.list .items:focus .projects-overlay {
+    transform: translatey(0%);
+}
+
+.projects-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+
+    background-color: rgba(33, 150, 243, 0.9);
+    padding: 0;
+    margin: 0;
+
+    transform: translatey(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 /* Модальное вікно */
 
