--- a/css/styles.css
+++ b/css/styles.css
@@ -128,18 +128,15 @@ img {
 }
 
 .link.current::after {
-
     content: '';
     display: block;
     position: absolute;
-
     width: 100%;
     height: 4px;
     border-radius: 2px;
     background: var(--accent-color);
     bottom: 0;
     left: 0;
-
     opacity: 1;
 
 }
@@ -175,6 +172,7 @@ img {
     text-decoration: none;
     justify-content: center;
     align-items: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-smartphone {
     height: 16px;
@@ -237,7 +235,8 @@ img {
     line-height: 1.88;
     letter-spacing: 0.06em;    
     cursor: pointer;   
-    border: none;    
+    border: none;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:focus,
@@ -295,6 +294,11 @@ img {
     display: flex;       
 }
 
+.case-list .items {
+    position: relative;
+    justify-content: center;
+}
+
 .case-list .items + .items {
     margin-left: 30px;
 }
@@ -308,9 +312,22 @@ img {
     line-height: 1.67;
     text-align: center;
     margin: 0;
-    margin-bottom: 50px;    
+    margin-bottom: 50px;        
 }
 
+.labels {
+    color: var(--text-white);
+    background: rgba(47, 48, 58, 0.8);
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* Наша команда  */
 
 .team {
@@ -379,6 +396,7 @@ img {
     align-items: center;
     justify-content: center;
     fill: #AFB1B8;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-logo {
@@ -424,6 +442,7 @@ img {
     align-items: center;
     justify-content: center;    
     color: #AFB1B8;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list .items+.items {
@@ -479,7 +498,8 @@ img {
     display: flex;
     color: rgba(255, 255, 255, 0.6);
     font-style: normal;
-    text-decoration: none;       
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address:hover,
@@ -539,6 +559,7 @@ img {
     padding: 0;
     justify-content: center;
     align-items: center;    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .www:focus,
@@ -563,6 +584,8 @@ img {
 .filter {
     text-align: center;
     margin-bottom: 50px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter button {
@@ -663,11 +686,9 @@ img {
     position: absolute;
     top: 0;
     bottom: 0;
-
     background-color: rgba(33, 150, 243, 0.9);
     padding: 0;
     margin: 0;
-
     transform: translatey(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -720,6 +741,7 @@ img {
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-color: transparent;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        cursor: pointer;
 }
 
 .close:hover,
