--- a/css/styles.css
+++ b/css/styles.css
@@ -739,7 +739,7 @@ img {
         border-radius: 50%;
         background: var(--primary-bg-color);
         border: 1px solid rgba(0, 0, 0, 0.1);
-        border-color: transparent;
+        /* border-color: transparent; */
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         cursor: pointer;
 }
